# dds

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
dds/: __init__.py  cli.py  config.py  context.py  health.py  logs.py  preflight.py  provision.py  rollback.py  secrets.py
dds/builders/: __init__.py  docker.py  frontend.py
dds/deployers/: __init__.py  container.py  database.py  static.py  swa.py
dds/providers/: __init__.py  base.py
dds/providers/azure/: __init__.py  backup.py  container.py  database.py  preflight.py  secrets.py  static.py  swa.py  utils.py
dds/providers/custom/: __init__.py  backup.py  container.py  database.py  preflight.py  secrets.py  static.py  template.py
dds/providers/docker/: __init__.py  backup.py  container.py  database.py  preflight.py  secrets.py  static.py  utils.py
dds/providers/kubernetes/: __init__.py  backup.py  container.py  preflight.py  secrets.py  utils.py
dds/utils/: azure.py  git.py  shell.py
examples/: cloudflare.yaml
tests/: test_backup.py  test_builders.py  test_cli.py  test_cloudflare_example.py  test_config.py  test_custom.py  test_deployers.py  test_preflight.py  test_secrets.py  test_shell_utils.py
